@@ -6,6 +6,7 @@ import de.adorsys.aspsp.xs2a.connector.spi.impl.FeignExceptionReader;
 import de.adorsys.ledgers.middleware.api.domain.sca.OpTypeTO;
 import de.adorsys.ledgers.middleware.api.domain.sca.SCAConsentResponseTO;
 import de.adorsys.ledgers.middleware.api.domain.sca.SCAResponseTO;
+import de.adorsys.ledgers.middleware.api.domain.sca.ScaStatusTO;
 import de.adorsys.ledgers.middleware.api.domain.um.BearerTokenTO;
 import de.adorsys.ledgers.middleware.api.domain.um.ScaUserDataTO;
 import de.adorsys.ledgers.rest.client.AuthRequestInterceptor;
@@ -110,10 +111,7 @@ public abstract class AbstractAuthorisationSpi<T, R extends SCAResponseTO> {
                                .payload(authenticationObjects)
                                .build();
             } else {
-                log.error("Process mismatch. Current SCA Status is {}", sca.getScaStatus());
-                return SpiResponse.<List<SpiAuthenticationObject>>builder()
-                               .error(new TppMessage(SCA_METHOD_UNKNOWN_PROCESS_MISMATCH))
-                               .build();
+                return getForZeroScaMethods(sca.getScaStatus());
             }
         } catch (FeignException feignException) {
             String devMessage = feignExceptionReader.getErrorMessage(feignException);
@@ -122,6 +120,13 @@ public abstract class AbstractAuthorisationSpi<T, R extends SCAResponseTO> {
                            .error(new TppMessage(FORMAT_ERROR_SCA_METHODS))
                            .build();
         }
+    }
+
+    SpiResponse<List<SpiAuthenticationObject>> getForZeroScaMethods(ScaStatusTO status) {
+        log.error("Process mismatch. Current SCA Status is {}", status);
+        return SpiResponse.<List<SpiAuthenticationObject>>builder()
+                       .error(new TppMessage(SCA_METHOD_UNKNOWN_PROCESS_MISMATCH))
+                       .build();
     }
 
     protected Optional<List<ScaUserDataTO>> getScaMethods(R sca) {
